--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,30 @@
     width: 50%;
     float: right;
 }
+
+.parent {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(9, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    height: 700px;
+    }
+
+    .parent > div{
+        background-color: gray;
+    }
+    
+    .div1 { grid-area: 2 / 1 / 6 / 3; }
+    .div2 { grid-area: 1 / 4 / 4 / 5; }
+    .div3 { grid-area: 1 / 5 / 2 / 6; }
+    .div4 { grid-area: 2 / 5 / 3 / 6; }
+    .div5 { grid-area: 4 / 4 / 7 / 5; }
+    .div6 { grid-area: 4 / 5 / 5 / 6; }
+    .div7 { grid-area: 5 / 5 / 6 / 6; }
+    .div8 { grid-area: 7 / 2 / 10 / 3; }
+    .div9 { grid-area: 7 / 3 / 10 / 4; }
+    .div10 { grid-area: 7 / 4 / 10 / 5; }
+    .div11 { grid-area: 7 / 5 / 10 / 6; }
+    .div12 { grid-area: 7 / 6 / 10 / 7; }
+    .div13 { grid-area: 7 / 7 / 10 / 8; }
