removed the background color for the cards on the game board and replaced it with a border line

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@
     }
 
     .parent > div{
-        background-color: gray;
+        /* background-color: gray; */
+        border: 1px solid black;
     }
     
     .div1 { grid-area: 2 / 1 / 6 / 3; }
