--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,10 @@
     img{
         width: 160px;
     }
+
+    p{
+      width: 100%;
+    }
     
     .div1 { grid-area: 2 / 1 / 6 / 3; }
     .div2 { grid-area: 1 / 4 / 4 / 5; }
