--- a/styles.css
+++ b/styles.css
@@ -108,31 +108,31 @@ form {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
   }
+  
+  img{
+    width: 160px;
+  }
+  
+  p{
+    width: 100%;
+  }
+  
+  .parent {
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
+      grid-template-rows: repeat(9, 1fr);
+      grid-column-gap: 10px;
+      grid-row-gap: 10px;
+      height: 700px;
+  }
+  
+  .parent > div{
+      /* background-color: gray; */
+      border: 1px solid white;
+      color: white;
+      text-align: center;
+  }
 
-
-.parent {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(9, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    height: 700px;
-    }
-
-    .parent > div{
-        /* background-color: gray; */
-        border: 1px solid black;
-        text-align: center;
-    }
-
-    img{
-        width: 160px;
-    }
-
-    p{
-      width: 100%;
-    }
-    
     .div1 { grid-area: 2 / 1 / 6 / 3; }
     .div2 { grid-area: 1 / 4 / 4 / 5; }
     .div3 { grid-area: 1 / 5 / 2 / 6; }
