--- a/styles.css
+++ b/styles.css
@@ -122,12 +122,17 @@ form {
   }
   
   .playByPlayContainer{
-    overflow-y: auto;
     width: 100%;
+    height:87px;
+    /* display:table; */
+    overflow-y: scroll;
   }
-
+  
   .playByPlay{
     list-style-type: none;
+    width: 100%;
+    height: 100%;
+    /* display:table-cell; */
   }
 
   .parent {
