--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ form {
   
   .playByPlayContainer{
     width: 100%;
-    height:87px;
+    height:119px;
     /* display:table; */
     overflow-y: scroll;
   }
@@ -133,6 +133,14 @@ form {
     width: 100%;
     height: 100%;
     /* display:table-cell; */
+  }
+
+  .userPlays{
+    color:lightskyblue;
+  }
+
+  .oppPlays{
+    color: red;
   }
 
   .parent {
