displays badge when fighting gym leader

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ body {
   display: none;
 }
 
+#badge-div {
+  /* border: 1px solid white; */
+  float: right;
+  /* position: absolute; */
+}
 
 #greeting{
     /* float: left; */
