--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,11 @@ form {
       text-align: center;
   }
 
+  .black-background{
+    background-color: black;
+    opacity: 0.5;
+  }
+
     .div1 { grid-area: 2 / 1 / 6 / 3; }
     .div2 { grid-area: 1 / 4 / 4 / 5; }
     .div3 { grid-area: 1 / 5 / 2 / 6; }
