--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,6 @@ body {
 }
 
 #greeting{
-    /* float: left; */
 }
 
 #login-logo-div {
@@ -73,6 +72,7 @@ form {
 
 .greeting {
     margin-left: 12.5%;
+    color: white;
 }
 
 #logo {
@@ -109,6 +109,13 @@ form {
     color: #f1f1f1;
   }
   
+  .red_button{
+    background-color: red;
+    color: white;
+    width: 100%;
+    height: 100px;
+  }
+
   /* Style page content */
   .main {
     margin-left: 160px; /* Same as the width of the sidebar */
