--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,12 @@ form {
     width: 100%;
     height: 100px;
   }
+  
+  .red_button:hover{
+    background-color: orange;
+    color: black;
+    border: 1px solid black;
+  }
 
   /* Style page content */
   .main {
