added a feature where if a pokemon is hurt and recalled they are given a red border in the users hand so the user knows they are damaged

--- a/styles.css
+++ b/styles.css
@@ -229,6 +229,10 @@ form {
     opacity: 0.8;
   }
 
+  .red-outline{
+    border: 3px solid red;
+  }
+
     .div1 { grid-area: 2 / 1 / 6 / 3; }
     .div2 { grid-area: 1 / 4 / 4 / 5; }
     .div3 { grid-area: 1 / 5 / 2 / 6; }
