implemented drawing feature based on clicking on the deck

--- a/styles.css
+++ b/styles.css
@@ -246,4 +246,5 @@ form {
     .div11 { grid-area: 7 / 5 / 10 / 6; }
     .div12 { grid-area: 7 / 6 / 10 / 7; }
     .div13 { grid-area: 7 / 7 / 10 / 8; }
+    .div14 { grid-area: 4 / 7 / 7 / 8; }
 
